# vulture

./: .gitignore  MANIFEST.in  README.md  apply.py  dataset.py  generate_embeddings.py  layers.py  model.py  pyproject.toml  train.py  utils.py
configs/: combined_no_shift.json  combined_no_shift_feats.json  combined_shift_flat.json  contract_combined_no_shift.json  contract_transfer.json
examples/: basic_example.ipynb  denoising.ipynb  different_featureset.ipynb  kmeans.ipynb  trainable_segmentation.ipynb
examples/example_data/: labels.tiff  ni_on_substrate.tif
install/: INSTALL_NVCC.md  conda.yml  download_chkpoints.ps1  download_chkpoints.sh  download_prep_lvos.sh  download_prep_mose.sh  figure_reqs.txt  requirements _dev.txt
paper_figures/: CNN_comparison.ipynb  cnn_perf_vs_time_script.py  feature_alignment.ipynb  intro_column_comparison.ipynb  is_benchmark.ipynb  is_examples.ipynb  is_helpers.py  miou_vs_n_labels.ipynb  miou_vs_n_labels_plot.ipynb  perf_landscape.ipynb  plot_CNN_perf_vs_interactive.ipynb  supp_channel_addition.ipynb  supp_classsifier_choice.ipynb  supp_feature_preproc.ipynb  supp_how_many_features.ipynb  supp_more_feat_vis.ipynb  supp_more_micorgraphs.ipynb  supp_natural_images.ipynb  supp_positional_bias.ipynb  supp_tree_comparison.ipynb  supp_upsampler_choice.ipynb  test_cnn.py  track_CNN_perf_vs_time.ipynb
vulture/: __init__.py  feature_prep.py  main.py  utils.py
vulture/comparisons/: pmm_helpers.py  strided.py  vision_transformer.py
vulture/comparisons/jafar/: jafar.py
vulture/comparisons/jafar/layers/: __init__.py  positional_encoding.py
vulture/datasets/: create_val_subset_for_embeddings.py  generate_FU_embeddings.py  generate_JF_embeddings.py  generate_LU_embeddings.py  learn_remap_LU_feats.py  lr_hr_embedding_dataset.py
vulture/models/: __init__.py  layers.py  model.py
vulture/models/configs/: upsampler_FU_ch32.json  upsampler_FU_default.json  upsampler_JF_compressed.json
vulture/train/: train_upsampler.py
yoeo/: __init__.py  feature_prep.py  main.py  utils.py
yoeo/comparisons/: autoencoder.py  lift.py  online_denoiser.py  pmm_helpers.py  strided.py  vision_transformer.py
yoeo/datasets/: __init__.py  create_val_subset_for_embeddings.py  generate_LU_embeddings.py  generate_embeddings.py  learn_remap_LU_feats.py  lr_hr_embedding_dataset.py  video_dataset.py
yoeo/models/: __init__.py  layers.py  model.py
yoeo/models/configs/: contract_transfer.json  simple_no_trs_dv2.json  simple_prop.json  upsampler_FU_ch32.json  upsampler_FU_default.json  upsampler_LU_compressed.json  upsampler_LU_narrow.json  upsampler_fewer_features.json  upsampler_full_dv2_fast.json
yoeo/models/configs/old/: combined_shift_flat.json  simple_prop.json  upsampler_fewer_features.json  upsampler_full_dv2.json  upsampler_full_dv2_fast.json
yoeo/train/: train_propagator.py  train_upsampler.py
