[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulture"
version = "0.0.1"
authors = [
  { name="Ronan Docherty", email="ronan.docherty18@imperial.ac.uk"},
]
description = "ViT feature upsampling via CNNs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch>=2.0.0",
  "torchvision",
  "torchmetrics>=0.10.3",
  "timm",
  "numpy",
  "scikit-learn",
  "pillow",
  "scikit-image",
  "tifffile",
  "matplotlib",
  "ninja",
  "packaging",
  "interactive-seg-backend@git+https://github.com/tldr-group/interactive-seg-backend"
  ]

# [project.optional-dependencies]
# paper = [
#   "omegaconf>=2.3.0",
#   "segmentation_models_pytorch",
#   "albumentations",
#   "featup@git+https://github.com/mhamilton723/FeatUp",
#   "pretrained_microscopy_models@git+https://github.com/nasa/pretrained-microscopy-models"
# ]

# [tool.uv.extra-build-dependencies]
# featup = ["torch"]

[project.urls]
"Homepage" = "https://github.com/tldr-group/vulture"
"Bug Tracker" = "https://github.com/tldr-group/vulture/issues"


[tool.setuptools]
packages = ["vulture", "vulture.models", "vulture.models.external"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
default = true
